testsuite/poke.pkl/int-union-type-diag-9.pk
/* { dg-do compile } */

type Foo =
  union int<33>
  {
    uint<33> le;
    struct int<32>
    {
      int16 a;
      int16 b;
    } la; /* { dg-error "invalid field size.*\n.*expected 33" } */
  };
